--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body, html {
 }
 #page_content {
     margin: 0px;
-    padding-bottom: 7rem;
+    padding-bottom: 6rem;
     padding-left: 30px;
     padding-right: 30px;
 }
@@ -22,7 +22,7 @@ footer {
     font-size: 0.75em;
     font-weight: 200;
     line-height: 200%;
-    height: 7rem;
+    height: 6rem;
     margin: 10px;
     padding: 0;
     position: absolute;
@@ -34,7 +34,9 @@ p {
     font-family: 'Inter', sans-serif;
     font-size: 1em;
     font-weight: 300;
-    line-height: 200%
+    line-height: 200%;
+    position: relative;
+    text-align: justify;
 }
 ul {
     list-style-type: none;
@@ -143,10 +145,6 @@ img.figure {
     font-weight: 400;
     padding: 10px;
     text-align: center;
-}
-.bodytext {
-    position: relative;
-    text-align: justify;
 }
 .captiontext {
     display: inline;
