--- a/style.css
+++ b/style.css
@@ -18,16 +18,14 @@ body, html {
 }
 footer {
     bottom: 0;
-    font-family: 'Inter', sans-serif;
     font-size: 0.75em;
     font-weight: 200;
-    line-height: 200%;
-    height: 5.5rem;
     margin: 0px;
-    padding: 0;
+    padding-left: 5%;
+    padding-right: 5%;
     position: absolute;
     text-align: center;
-    width: 94%;
+    width: 90%;
 }
 p {
     color: rgba(0, 0, 0, 1);
