--- a/style.css
+++ b/style.css
@@ -21,11 +21,10 @@ footer {
     font-size: 0.75em;
     font-weight: 200;
     margin: 0px;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding: 1%;
     position: absolute;
     text-align: center;
-    width: 90%;
+    width: 98%;
 }
 p {
     color: rgba(0, 0, 0, 1);
@@ -143,7 +142,6 @@ h3 {
     max-width: 50%;
     height: auto;
     max-height: 20rem;
-    
 }
 .introtext {
     font-size: 0.75em;
