--- a/style.css
+++ b/style.css
@@ -55,13 +55,15 @@ a {
     line-height: 200%
 }
 .row {
-  display: flex;
-  height:auto;
-  max-height: 20rem;
+    display: flex;
+    flex-flow: row wrap;
 }
-
 .col {
-  flex: 1;
+    flex: 1;
+    height:auto;
+    max-height: 20rem;
+    padding: 10px;
+    max-width: 20rem;
 }
 
 /* Navigation and hero image/text */
