--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ a {
 }
 .col {
     flex: 1;
-    height:auto;
+    width:auto;
     max-height: 20rem;
     padding: 10px;
     max-width: 20rem;
@@ -147,12 +147,6 @@ h3 {
 .figure {
     max-width: 100%;
     height: auto;
-}
-#headshot {
-    float: left;
-    max-width: 50%;
-    height: auto;
-    max-height: 20rem;
 }
 .introtext {
     font-size: 0.75em;
