--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Containers, wrappers, and general formatting */
+/* Containers, wrappers, and general formatting (including flex) */
 body, html {
     text-size-adjust: none;
 	background-color: rgba(245, 245, 245, 1);
