--- a/style.css
+++ b/style.css
@@ -110,18 +110,15 @@ a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
 	position: relative;
 }
 #hero_text {
-	left: 20px;
-    margin: auto;
-    max-width: 80rem;
+    padding-left: 20px;
     padding-right: 20px;
 	position: absolute;
 	top: 50%;
 	transform: translate(0%, -50%);
 }
 #hero_subtext {
-	left: 20px;
-    margin: auto;
-    max-width: 70rem;
+    padding-left: 20px;
+	padding-right: 20px;
 	position: absolute;
 	top: 85%;
 	transform: translate(0%, -50%);
