--- a/style.css
+++ b/style.css
@@ -110,10 +110,12 @@ a.nav:link, a.nav:visited, a.nav:hover, a.nav:active {
 	position: relative;
 }
 #hero_text {
+    margin: auto;
+    max-width: 80rem;
     padding-left: 20px;
     padding-right: 20px;
-	position: absolute;
-	top: 50%;
+	position: relative;
+	top: 59%;
 	transform: translate(0%, -50%);
 }
 #hero_subtext {
